--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,6 +75,7 @@
 
 * {
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
   padding: 0;
   margin: 0;
 }
@@ -82,10 +83,28 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  min-width: 360px;
+  scroll-behavior: smooth;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+/* styles for animated nav items ?this is ugly I need to refactor this */
+#nav-item-0:checked ~ div {
+  --tw-translate-x: 0%;
+}
+
+#nav-item-1:checked ~ div {
+  --tw-translate-x: 100%;
+}
+
+#nav-item-2:checked ~ div {
+  --tw-translate-x: 200%;
+}
+
+#nav-item-3:checked ~ div {
+  --tw-translate-x: 300%;
 }
