--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -43,7 +43,7 @@
   }
 
   .background-drop {
-    @apply backdrop-filter backdrop-blur-[1px] bg-opacity-5;
+    @apply backdrop-filter backdrop-blur-[2px] bg-opacity-5;
   }
 
   .card-hover {
@@ -52,5 +52,8 @@
 
   .sm-content-pt {
     @apply pt-20 sm:pt-1;
+  }
+  .text-hover-primary {
+    @apply hover:text-neutral-800 dark:hover:text-neutral-200;
   }
 }
