--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -35,7 +35,7 @@
   }
 
   .text-secondary {
-    @apply text-gray-600 dark:text-zinc-300;
+    @apply text-gray-600 dark:text-gray-300;
   }
 
   .text-inverse {
