--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -10,7 +10,7 @@
     @apply max-w-2xl mx-auto;
   }
   .bg-primary {
-    @apply bg-white dark:bg-gray-900;
+    @apply bg-gray-200/20 dark:bg-black/20;
   }
 
   .bg-secondary {
@@ -50,7 +50,7 @@
   }
 
   .card-hover {
-    @apply hover:bg-gray-200/50 dark:hover:bg-gray-800/50;
+    @apply hover:bg-gray-200/50 dark:hover:bg-gray-800/30;
   }
 
   .sm-content-pt {
@@ -70,5 +70,9 @@
 
   .prose code span {
     @apply font-medium;
+  }
+
+  .text-underline-gradient {
+    @apply bg-left-bottom bg-no-repeat bg-gradient-to-r from-gray-400 to-gray-200 bg-size-1 dark:from-gray-600 dark:to-gray-800;
   }
 }
