--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -46,7 +46,7 @@
   }
 
   .background-drop {
-    @apply backdrop-filter backdrop-blur-[2px] bg-opacity-5;
+    @apply backdrop-blur-[5px] bg-opacity-50;
   }
 
   .card-hover {
